--- a/src/Components/NavigationBar/Navbar.css
+++ b/src/Components/NavigationBar/Navbar.css
@@ -9,37 +9,66 @@
 }
 
 :root {
-  --primary_Clr: red;
-  --secondary_Clr: blue;
-  --btn_Clr: gray;
+  --primary_Clr: #0a2640;
+  --secondary_Clr: #65e4a3;
+  --btn_Clr: #1c3d5b;
+  --text_Clr: #fff;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  line-height: 1.1rem;
+  line-height: 2rem;
+  position: relative;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2% 8%;
-  background: yellow;
+  padding: 1.4% 6%;
+  box-shadow: 4px 4px 4px 0px var(--primary_Clr);
+  background: var(--primary_Clr);
+  position: fixed;
+  width: 100%;
+  top: 0;
 
   .logo {
     width: 60px;
     height: 60px;
     border-radius: 50px;
-    border: 3px solid var(--secondary_Clr);
+    border: 3px solid var(--text_Clr);
+    overflow: hidden;
+
+    .img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
 .nav_links ul li {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   list-style: none;
+  display: inline-block;
+  padding: 0px 20px;
 }
 
 .nav_links ul li a {
-  display: inline-block;
+  text-decoration: none;
+  color: var(--text_Clr);
+}
+
+.nav_links ul li::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: var(--text_Clr);
+  display: block;
+  margin: auto;
+  transition: 0.4s ease-in;
+}
+
+.nav_links ul li:hover::after {
+  width: 100%;
 }
