--- a/src/Components/NavigationBar/Navbar.css
+++ b/src/Components/NavigationBar/Navbar.css
@@ -20,6 +20,7 @@ body {
   font-weight: 400;
   line-height: 2rem;
   position: relative;
+  scroll-behavior: smooth;
 }
 
 nav {
@@ -32,10 +33,11 @@ nav {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1;
 
   .logo {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50px;
     border: 3px solid var(--text_Clr);
     overflow: hidden;
