--- a/src/Components/Work/Work.module.css
+++ b/src/Components/Work/Work.module.css
@@ -21,16 +21,23 @@
   padding-bottom: 5%;
 }
 
-.project_img {
-  width: 100%;
-  height: 100%;
-  transition: 0.5s ease-in;
-}
-
 .recent_works_wripper {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
   flex-wrap: wrap;
+}
+
+@media screen and (max-width: 767px) {
+  #works {
+    padding: 18% 6%;
+  }
+  .work_title {
+    padding-bottom: 5%;
+  }
+  .description {
+    padding-bottom: 5%;
+    font-size: 1.1rem;
+  }
 }
