--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -18,7 +18,6 @@
 
 .about_content {
   width: 730px;
-  /* background: green; */
 }
 
 .about_content_one {
@@ -56,6 +55,40 @@
 
 .details_one {
   padding-bottom: 3%;
+}
+
+.view_card_wripper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-top: 6%;
+}
+
+.aminate {
+  color: var(--secondary_Clr);
+  display: inline-block;
+  animation: shiftUp 0.7s infinite;
+  z-index: -4px;
+}
+
+@keyframes shiftUp {
+  0% {
+    transform: translateY(0px);
+  }
+  40% {
+    transform: translateY(-3px);
+  }
+  60% {
+    transform: translateY(-6px);
+  }
+  80% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(6px);
+  }
 }
 
 @media screen and (max-width: 767px) {
