--- a/src/Components/NavigationBar/Navbar.module.css
+++ b/src/Components/NavigationBar/Navbar.module.css
@@ -74,3 +74,36 @@ nav {
 .nav_links ul li:hover::after {
   width: 100%;
 }
+
+.showMenu,
+.hideMenu {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .nav_links {
+    position: absolute;
+    top: 70px;
+    right: 50px;
+    background: var(--primary_Clr);
+    width: 300px;
+    text-align: center;
+    border-radius: 20px;
+  }
+  .nav_links ul li {
+    display: block;
+    padding: 2% 0px;
+    font-size: 1.4rem;
+  }
+  .showMenu,
+  .hideMenu {
+    display: block;
+    font-size: 2.5rem;
+    color: #fff;
+  }
+
+  .hideMenu {
+    position: absolute;
+    right: 10px;
+  }
+}
