--- a/src/Components/NavigationBar/Navbar.module.css
+++ b/src/Components/NavigationBar/Navbar.module.css
@@ -1,28 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap");
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  --primary_Clr: #0a2640;
-  --secondary_Clr: #65e4a3;
-  --btn_Clr: #1c3d5b;
-  --text_Clr: #fff;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  line-height: 2rem;
-  position: relative;
-  scroll-behavior: smooth;
-}
-
 nav {
   display: flex;
   justify-content: space-between;
@@ -83,11 +58,12 @@ nav {
 @media screen and (max-width: 767px) {
   .nav_links {
     position: absolute;
-    top: 70px;
-    right: 50px;
     background: var(--primary_Clr);
-    width: 300px;
+    top: -320px;
+    right: 35px;
+    width: 350px;
     text-align: center;
+    padding: 4% 2%;
     border-radius: 20px;
   }
   .nav_links ul li {
@@ -100,10 +76,12 @@ nav {
     display: block;
     font-size: 2.5rem;
     color: #fff;
+    cursor: pointer;
   }
 
   .hideMenu {
     position: absolute;
-    right: 10px;
+    top: 0;
+    right: 20px;
   }
 }
