--- a/src/Components/Work/Work.module.css
+++ b/src/Components/Work/Work.module.css
@@ -7,7 +7,7 @@
 
 #works {
   background: #f5f5f5;
-  padding: 6% 6%;
+  padding: 10% 6% 6% 6%;
 }
 
 .work_title {
@@ -19,6 +19,9 @@
 
 .description {
   padding-bottom: 5%;
+  font-size: 1.1rem;
+  text-transform: capitalize;
+  opacity: 0.7;
 }
 
 .recent_works_wripper {
@@ -31,7 +34,7 @@
 
 @media screen and (max-width: 767px) {
   #works {
-    padding: 18% 6%;
+    padding: 25% 6% 20% 6%;
   }
   .work_title {
     padding-bottom: 5%;
