Added the Technologies section as a component to the project to indicated technologies that i am familar with and an effect to the scrolllbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,20 @@
 	font-family: "Roboto", sans-serif;
 	color: #303841;
 }
+
+::-webkit-scrollbar {
+	width: 8px;
+	border-radius: 30px;
+}
+::-webkit-scrollbar-track {
+	background: #243073;
+	border-radius: 20px;
+}
+::-webkit-scrollbar-thumb {
+	background: linear-gradient(to top, #0000, #ffffff, #243073);
+	height: 5px;
+	border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: linear-gradient(to top, green, white, #243073);
+}
