--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+	.TechIconWripper {
+		@apply w-28 h-20  border-2 border-neutral-600 cursor-pointer rounded-lg;
+	}
+}
+
 :root {
 	font-family: "Roboto", sans-serif;
 	color: #303841;
